--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css\font-awesome-4.7.0\css\font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
             </div>
             <div class="input">
                 <input type="text" placeholder="Take the garbage out">
-                <button>+</button>
+                <button><i class="fa fa-plus"></i></button>
             </div>
             <div class="notodos__content">
                 <img src="" alt="">
@@ -26,10 +27,10 @@
                 <p>You have ... pending items</p>
                 <input class="pending__item" type="checkbox" id="pending1" name="something" value="something">
                 <label for="pending1"> Something</label>
-                <button class="delete__item"></button>
+                <button class="delete__item"><i class="fa fa-trash"></i></button>
                 <input class="pending__item" type="checkbox" id="pending2" name="something" value="something">
                 <label for="pending2"> Something</label>
-                <button class="delete__item"></button>
+                <button class="delete__item"><i class="fa fa-trash"></i></button>
             </div>
             <div class="completed__content">
                 <p>Completed tasks: 50%</p>
