adding tasks ok

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>Daily To-Do list manager</h1>
         <div class="content__box">
             <div class="date">
-                <h2>Thursday<br>
-                    10-15-2020</h2>
+                Thursday<br>
+                    10-15-2020
 
             </div>
             <div class="todo__input">
@@ -27,8 +27,8 @@
                 <h3>Time to chill! You have no todos.</h3>
             </div>
             <div class="pending__content">
-                <p>You have ... pending items</p>
-                <div class="pending__item">
+                <p class="counter__content">You have <span class="counter"></span> pending items</p>
+                <!-- <div class="pending__item">
                     <input class="pending__check" type="checkbox" id="pending1" name="something" value="something">
                     <label class="pending__text" for="pending1"> Something</label>
                     <button class="delete__item"><i class="fa fa-trash"></i></button>
@@ -37,10 +37,10 @@
                     <input class="pending__check" type="checkbox" id="pending2" name="something" value="something">
                     <label class="pending__text" for="pending2"> Something</label>
                     <button class="delete__item"><i class="fa fa-trash"></i></button>
-                </div>
+                </div> -->
             </div>
             <div class="completed__content">
-                <p>Completed tasks: 50%</p>
+                <!-- <p>Completed tasks: 50%</p>
                 <div class="completed__item">
                     <input class="completed__check" type="checkbox" id="pending1" name="something" value="something" checked>
                     <label class="completed__text" for="pending1"> Something</label>
@@ -48,7 +48,7 @@
                 <div class="completed__item">
                     <input class="completed__check" type="checkbox" id="pending2" name="something" value="something" checked>
                     <label class="completed__text" for="pending2"> Something</label>
-                </div>
+                </div> -->
             </div>
             <div class="footer__content">
                 <button class="show__button">Show Complete</button>
@@ -57,7 +57,7 @@
         </div>
     </div>
 
-    <script src="./js/todo"></script>
+    <script src="./js/todo.js"></script>
 </body>
 
 </html>
