todo list completed

--- a/index.html
+++ b/index.html
@@ -22,34 +22,14 @@
                 <input class="input__item" type="text" placeholder="Take the garbage out">
                 <button class="add__item"><i class="fa fa-plus"></i></button>
             </div>
-            <div class="notodos__content">
+            <!-- <div class="notodos__content">
                 <img src="css/beer.png" alt="cheers" style="width:50px">
                 <h3>Time to chill! You have no todos.</h3>
-            </div>
-            <div class="pending__content">
-                <p class="counter__content">You have <span class="counter"></span> pending items</p>
-                <!-- <div class="pending__item">
-                    <input class="pending__check" type="checkbox" id="pending1" name="something" value="something">
-                    <label class="pending__text" for="pending1"> Something</label>
-                    <button class="delete__item"><i class="fa fa-trash"></i></button>
-                </div>
-                <div class="pending__item">
-                    <input class="pending__check" type="checkbox" id="pending2" name="something" value="something">
-                    <label class="pending__text" for="pending2"> Something</label>
-                    <button class="delete__item"><i class="fa fa-trash"></i></button>
-                </div> -->
-            </div>
-            <div class="completed__content">
-                <!-- <p>Completed tasks: 50%</p>
-                <div class="completed__item">
-                    <input class="completed__check" type="checkbox" id="pending1" name="something" value="something" checked>
-                    <label class="completed__text" for="pending1"> Something</label>
-                </div>
-                <div class="completed__item">
-                    <input class="completed__check" type="checkbox" id="pending2" name="something" value="something" checked>
-                    <label class="completed__text" for="pending2"> Something</label>
-                </div> -->
-            </div>
+            </div> -->
+            <h4>You have <span class="counter">0</span> pending items</h4>
+            <div class="pending__content"></div>
+            <h4>Completed tasks: </h4>
+            <div class="completed__content hide"></div>
             <div class="footer__content">
                 <button class="show__button">Show Complete</button>
                 <button class="clear__button">Clear All</button>
@@ -57,7 +37,8 @@
         </div>
     </div>
 
-    <script src="./js/todo.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
+
