add some animation

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <input class="input__item" type="text" placeholder="Take the garbage out">
                 <button class="add__item"><i class="fa fa-plus"></i></button>
             </div>
-            <!-- <div class="notodos__content">
+            <div class="notodos__content hide">
                 <img src="css/beer.png" alt="cheers" style="width:50px">
                 <h3>Time to chill! You have no todos.</h3>
-            </div> -->
+            </div>
             <h4>You have <span class="counter">0</span> pending items</h4>
             <div class="pending__content"></div>
-            <h4>Completed tasks: </h4>
+            <h4 class="completed__title hide">Completed tasks: </h4>
             <div class="completed__content hide"></div>
             <div class="footer__content">
                 <button class="show__button">Show Complete</button>
